# IDATT2104-NP-Project

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/crdt-app/: Cargo.toml
crates/crdt-core/: Cargo.toml
crates/crdt-core/src/: lib.rs  traits.rs
crates/crdt-core/src/counters/: g_counter.rs  mod.rs  pn_counter.rs
crates/crdt-core/src/registers/: lww_register.rs  mv_register.rs
crates/crdt-core/src/sets/: g_set.rs  mod.rs  or_set.rs  two_p_set.rs
crates/crdt-core/src/todo/: mod.rs
crates/crdt-lib/: Cargo.toml
crates/crdt-lib/src/canvas/: mod.rs
crates/crdt-net/: Cargo.toml
crates/crdt-node/: Cargo.toml
crates/crdt-node/src/: api.rs  gossip.rs  main.rs  node.rs
crdt-app/: Cargo.toml
crdt-app/src/: api.rs  canvas.rs  gossip.rs  main.rs  state.rs
crdt-core/: Cargo.toml
crdt-core/proptest-regressions/clocks/: mod.txt
crdt-core/proptest-regressions/registers/: mv_register.txt
crdt-core/src/: lib.rs  traits.rs
crdt-core/src/canvas/: mod.rs
crdt-core/src/clocks/: mod.rs
crdt-core/src/counters/: g_counter.rs  gcounter.rs  mod.rs  pn_counter.rs
crdt-core/src/maps/: lww_map.rs  mod.rs
crdt-core/src/registers/: lww_register.rs  mod.rs  mv_register.rs
crdt-core/src/sets/: g_set.rs  gset.rs  mod.rs  or_set.rs  orset.rs  two_p_set.rs  two_pset.rs
crdt-net/: Cargo.toml
crdt-net/examples/: two_node_demo.rs
crdt-net/src/: config.rs  discovery.rs  engine.rs  lib.rs  message.rs
crdt-net/tests/: discovery.rs  gossip.rs  tombstones.rs
crdt-net/tests/common/: mod.rs
docs/: crdt-net.md
docs/specs/: 2026-05-12-canvas-design.md  2026-05-12-crdt-design.md  2026-05-14-system-wiring.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ColorPicker.vue  Leaderboard.vue  NodeInfo.vue  PeerList.vue  PixelCanvas.vue  TodoItem.vue  TodoList.vue
frontend/src/stores/: canvas.js  todo.js
