[package]
name = "crdt-app"
version = "0.1.0"
edition = "2021"

[dependencies]
crdt-core = { path = "../crdt-core", features = ["serde"] }
crdt-net  = { path = "../crdt-net" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
