[package]
name = "crdt-net"
version = "0.1.0"
edition = "2024"

[dependencies]
crdt-core = { path = "../crdt-core" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
rand = "0.8"
mdns-sd = "0.11"
local-ip-address = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "io-std", "test-util"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
