[package]
name = "crdt-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdt-app"
path = "src/main.rs"

[dependencies]
crdt-lib = { path = "../crdt-lib" }
crdt-net = { path = "../crdt-net" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
